k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qvis-service
  labels:
    app: qvis
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: qvis
  type: ClusterIP
